# AASd

./: .gitignore  AASd.code-workspace  AASd10.wpr  AGENTS.md  CHANGELOG.md  Makefile  README.md  TODO  TODO.md  aasd.py  package-lock.json  pyproject.toml  requirements.txt
.VSCodeCounter/2024-01-31_22-29-03/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
archive/docs/: MIcmp.md
archive/examples/: example_com_module.py  example_run_module.py
archive/tests/: test_libs_interfaces_init.py
docs/: API-Surface.md  API.md  Architecture.md  Flow.md  Installation.md  MEmailAlert.md  MIcmp.md  MLmsPayment.md  MLmsTariff.md  MZfsSnapshot.md  Modules.md  PluginAPI.md  PluginChecklist.md  PluginMigration.md  PluginRepositoryModel.md  README.md  api_reference.md  conf.py  index.md
docs/systemd/: aasd.env  aasd.service
examples/: attr.py  example_com_module.py  example_run_module.py  mods.md  mods.py
examples/plugin-comms-template/: README.md  __init__.py  load.py
examples/plugin-worker-template/: CHANGELOG.md  README.md  load.py
libs/: __init__.py  app.py  conf.py  keys.py
libs/base/: __init__.py  classes.py
libs/com/: __init__.py  message.py
libs/db_models/: __init__.py  base.py  connectors.py
libs/interfaces/: __init__.py  conf.py  modules.py
libs/plugins/: __init__.py  config.py  keys.py  loader.py  mixins.py  runtime.py  service.py
libs/templates/: __init__.py  modules.py  schema.py
libs/tools/: __init__.py  datetool.py  icmp.py
libs/types/: __init__.py
modules/com/: __init__.py  memailalert.py  memailalert2.py
modules/run/: memailtest.py  micmp.py  mlmspayment.py  mlmstariff.py  mtest.py  mzfssnapshot.py  test.py
plugins/example1/: __init__.py  (+1 more)
server/: __init__.py  daemon.py
tests/: create_engine.py  create_engine_failover.py  customer_balance.py  failover.py  message.py  test_libs_app.py  test_libs_base_init.py  test_libs_com_message.py  test_libs_conf.py  test_libs_init.py  test_libs_plugins.py  test_libs_plugins_mixins.py  test_libs_templates_init.py  test_libs_templates_schema.py  test_libs_tools_datetool.py  test_libs_tools_icmp.py  test_libs_tools_init.py  test_message_atpriority.py  test_mzfssnapshot.py  test_plugins_examples.py  test_server_daemon_plugins.py
(+137 files in other folders)
