[tool.poetry]
name = "aasd"
version = "0.1.0"
description = "Autonomous Administrative System daemon"
authors = ["Jacek 'Szumak' Kotlarski <szumak@virthost.pl>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jsktoolbox = "1.0.21"
mako = "^1.3.5"
sqlalchemy = "^2.0.34"
mysql-connector-python = "^8.4.0"
pymysql = "^1.1.0"
guppy3 = "^3.1.4.post1"
setproctitle = "^1.3.3"
sqlalchemy-utils = "^0.41.2"

[tool.poetry.group.dev.dependencies]
black = "^23.10.1"
pytest = "^7.4.3"
nose = "^1.3.7"
typing-extensions = "^4.8.0"
pycodestyle = "^2.11.1"
pydocstyle = "^6.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
