[tool.poetry]
name = "aasd"
version = "1.0.17-DEV"
description = "Autonomous Administrative System daemon"
authors = ["Jacek 'Szumak' Kotlarski <szumak@virthost.pl>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jsktoolbox = "^1.2.2"
mako = "^1.3.10"
sqlalchemy = "^2.0.34"
mysql-connector-python = "^8.4.0"
pymysql = "^1.1.2"
guppy3 = "^3.1.6"
setproctitle = "^1.3.7"
sqlalchemy-utils = "^0.41.2"

[tool.poetry.group.dev.dependencies]
black = "^23.12.1"
pytest = "^7.4.4"
nose = "^1.3.7"
typing-extensions = "^4.15.0"
pycodestyle = "^2.14.0"
pydocstyle = "^6.3.0"
mypy = "^1.19.1"
sphinx = "^8.2.3"
myst-parser = "^4.0.1"
sphinxcontrib-mermaid = "^2.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
