[tool.poetry]
name = "aasd"
version = "2.4.9-DEV"
description = "Autonomous Administrative System daemon"
authors = ["Jacek 'Szumak' Kotlarski <szumak@virthost.pl>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jsktoolbox = "^1.2.4"
setproctitle = "^1.3.7"

[tool.poetry.group.dev.dependencies]
black = "^23.12.1"
pytest = "^7.4.4"
pycodestyle = "^2.14.0"
pydocstyle = "^6.3.0"
mypy = "^1.19.1"
sphinx = "^8.2.3"
myst-parser = "^4.0.1"
sphinxcontrib-mermaid = "^2.0.1"
pytest-cov = "^7.1.0"

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
